<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Fragments.StorageFragment">

    <ImageView
    android:id="@+id/background_top_image"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:scaleType="centerCrop"
    android:src="@drawable/storage_back_2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/background_bottom_image"

        android:contentDescription="@string/storage_archive_background_description" />

    <View
        android:id="@+id/overlay_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/overlay"
        app:layout_constraintEnd_toEndOf="@+id/background_top_image"
        app:layout_constraintStart_toStartOf="@+id/background_top_image"
        app:layout_constraintTop_toTopOf="@+id/background_top_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_storage_archive"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/button_background"
        android:paddingVertical="12dp"
        android:text="@string/storage_archive_button_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_top_image"
        app:layout_constraintStart_toStartOf="@+id/background_top_image"
        app:layout_constraintTop_toTopOf="@+id/background_top_image" />

    <ImageView
        android:id="@+id/background_bottom_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/institutional_archive_background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/storage_back_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_top_image" />

    <View
        android:id="@+id/overlay_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/overlay"
        app:layout_constraintBottom_toBottomOf="@+id/background_bottom_image"
        app:layout_constraintEnd_toEndOf="@+id/background_bottom_image"
        app:layout_constraintStart_toStartOf="@+id/background_bottom_image"
        app:layout_constraintTop_toTopOf="@+id/background_bottom_image" />


</androidx.constraintlayout.widget.ConstraintLayout>